IN PROGRESS - issue KOKU-459: Iframe scrollbar problem https://partner.ixonos.com/browse/,DanaInfo=.ajlnh1yEqq0kKu-2249R48xw8,SSL+KOKU-459
* IE problem fixed

--- a/common/koku-taskmanager/koku-taskmanager-portlet/src/main/webapp/css/main.CSS
+++ b/common/koku-taskmanager/koku-taskmanager-portlet/src/main/webapp/css/main.CSS
@@ -44,8 +44,9 @@
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	border: 1px solid #cccccc;
-	height: 360px;
-	padding: 2px;
+	/* height: 360px; */
+	padding: 2px;	
+	overflow: hidden;
 }
 
 /* main table */
